[package]
name = "projekt"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pj"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs-next = "2"
git2 = "0.20"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
toml = "1"
uuid = { version = "1", features = ["v7"] }
walkdir = "2"
